--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,9 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: lightsalmon;
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -111,21 +112,29 @@ body {
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
   font-weight: 700;
-  display:flex;
+  display: flex;
   justify-content: space-between;
+  flex-flow: row wrap;
+  align-items: center;
+
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
-  width: 30%;
+  font-size: 1em;
+  background-color: lightsalmon;
+  height: auto; 
+  width: 31%;
   display:flex;
   justify-content: center;
   align-items: center;
+}
+
+.div-1, .div-2 {
+    border-right: 3px solid whitesmoke;
+    padding-right: 8px;
 }
 
 
