--- a/css/main.css
+++ b/css/main.css
@@ -98,46 +98,77 @@ textarea {
 
 html {
   background-color: lightsalmon;
-  height: 100%;
+  height: 30%;
   width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
+  padding: 0em 2em;
+  font-size: 1.25 em;
   height: 100%;
-}
-
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+  color: white;
   display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
-  align-items: center;
-
-}
-
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1em;
-  background-color: lightsalmon;
-  height: auto; 
-  width: 31%;
-  display:flex;
   justify-content: center;
-  align-items: center;
-}
-
-.div-1, .div-2 {
-    border-right: 3px solid whitesmoke;
-    padding-right: 8px;
 }
 
 
+header,
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+header h1 {
+    font-family: 'Source Sans Pro' , sans-serif;
+    font-size: 3em;
+}
+
+main {
+  background-color: lightsalmon;
+ width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 2px solid white;
+}
+
+main p {
+    font-size: 1.75em;
+}
+
+header,
+footer,
+main {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.flex-container {
+    display: flex;
+    align-items: center;
+    flex-flow:row wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+}
+
+.flex-items {
+  line-height: 1.5em;
+  font-size: 1.25em;
+  display: flex;
+justify-content: center;
+align-items: center;
+border-bottom: 2px solid white
+}
+
+footer {
+    border-top: 2px solid white;
+}
+
+footer i {
+    padding: 20px 20px 0 0;
+}
 
 
 /* ==========================================================================
@@ -219,6 +250,25 @@ body {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+   @media all and (max-width: 768px) {
+    body {
+      padding: 1em;
+    }
+}
+
+@media (min-width: 1200px) {
+    .flex-items {
+      flex-basis: 30%;
+      border-bottom: none;
+    }
+
+    #div-2 p {
+      border-left: 1px solid white;
+      border-right: 1px solid white;
+      padding: 0 40px;
+    }
+}
+
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
